--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -5617,6 +5617,8 @@ More information about this setting can be found [here](https://docs.sqlalchemy.
 
 ### Redis
 
+#### REDIS_URL
+
 - Type: `str`
 - Description: Specifies the URL of the Redis instance or cluster host for storing application state.
 - Examples:
