Format REDIS_URL header as code block
Missed the correct formatting in the previous PR, thank you for awesome job and product!

--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -5617,7 +5617,7 @@ More information about this setting can be found [here](https://docs.sqlalchemy.
 
 ### Redis
 
-#### REDIS_URL
+#### `REDIS_URL`
 
 - Type: `str`
 - Description: Specifies the URL of the Redis instance or cluster host for storing application state.
